_sass/main.scss
$backgroundColor: #ffffff;
$bodyColor: #000000;

* {
  font-family: 'Playfair Display', serif;
}

body {
  background: $backgroundColor;
  color: $bodyColor;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#navbar-container {
  width: 200%;
  display: flex;
  align-items: center;
  flex-direction: column;
  border-style: solid;
  border-width: 0 0 1px 0;
  border-color: black;
}

#navbar {
  width: 90%;
  max-width: 1000px;
}

.nav-links {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  list-style: none;
  flex-direction: row;
}

@media (max-width: 500px) {
  .nav-links {
    justify-content: center;
  }
}

.nav-links > li {
  display: flex;
  align-items: center;
  padding: 1em 50px;
  height: 30px;
}

.nav-links :hover {
  background-color: #aaa;
}

#content-container {
  width: 90%;
  max-width: 1000px;
  padding: 25px;
  word-wrap: break-word;
}

h1 {
  font-size: 1.75em;
  padding: 0.5em 0;
  margin-bottom: 0.5em;
  border-style: solid;
  border-width: 0 0 1px 0;
  border-color: black;
}

h2 {
  font-size: 1.5em;
  margin-bottom: 0.5em;
}

p {
  margin-bottom: 1em;
}

a:hover {
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
}

